--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,25 +25,70 @@ code {
 }
 
 .makeStyles-appBar-4 {
-    z-index: 2000!important;
+    z-index: 1000!important;
 }
 
-.MuiCardMedia-root {
+.card-img-top {
     cursor: pointer;
+    margin: auto;
+    height: 170px!important;
+    width: 170px!important;
 }
 
-h6.card-title {
-  color: #000000;
+.card-text {
+  color:rgb(153, 153, 153);
+  font-size: 12px;
+  padding-bottom: 100px;
 }
 
-p.card-paragraph {
+.card-title{
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color:
+  rgb(48, 48, 48);
+  overflow: hidden;
+  font-size: 14px;
+}
+
+.card-paragraph{
   font-size: 12px;
 }
-
 img.card-img{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
+  width: 328px;
+  height: 328px;
+}
+
+.modal-body{
+  padding: 80px 0px !important;
+}
+
+.price{
+  text-align: right;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 3px 0px;
+  color: #000000;
+}
+
+p.taille {
+  padding-bottom: 25px!important;
+  font-weight: bold;
+}
+
+.MuiPaper-root {
+    z-index: 100;
+}
+
+.card-deck {
+    margin-left: 0px!important;
+    margin-bottom: 25px;
+}
+
+.priceUnit {
+  color:rgb(153, 153, 153);
+  font-size: 12px;
 }
