--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,15 @@
+/*
+*
+* ==========================================
+* APP.SCSS
+* ==========================================
+*
+*/
+
+/*
+    Body
+*/
+
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 $base-color : #282c34;
 $active-color : #3886c9;
@@ -45,37 +57,11 @@ div.body{
     font-size: 17px;
   }
 
-  hr {
-    height: 1px;
-    margin-bottom: -1px;
-    border: none;
-    border-bottom-color: currentcolor;
-    border-bottom-style: none;
-    border-bottom-width: medium;
-    border-bottom: 1px solid #ececec;
-    margin-top: 40px;
-  }
-
-  h3 {
-    font-size: 25px;
-  }
-
-  h4 {
-    font-size: 20px;
-  }
-
-  h5 {
-    font-size: 15px;
-  }
-
   h6 {
-    line-height: 1.2;
-    font-weight: 700;
-    letter-spacing: 2px;
-    padding-top: 15px;
-    font-size: 20px;
-    color : $base-color!important;
+    color: #000000;
+    text-transform: none;
   }
+
 
   span.imgSubTitle{
     font-size: 18px;
@@ -134,4 +120,109 @@ svg {
 
 .MuiAppBar-colorPrimary {
   background-color : #3f51b5!important;
+}
+
+/*
+    style élément de rupture 
+*/
+
+hr.dashed {
+    border-top: 2px dashed #999;
+}
+
+hr.dotted {
+    border-top: 2px dotted #999;
+}
+
+hr.solid {
+    border-top: 2px solid #999;
+}
+
+
+hr.hr-text {
+  position: relative;
+    border: none;
+    height: 1px;
+    background: #999;
+    margin: 80px 0;
+}
+
+hr.hr-text::before {
+    content: attr(data-content);
+    display: inline-block;
+    background: #fff;
+    font-weight: bold;
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+    border-radius: 30rem;
+    padding: 0.2rem 2rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+/*
+    Style de card-produit.components
+*/
+
+.card-img-top {
+    cursor: pointer;
+    margin: auto;
+    height: 170px!important;
+    width: 170px!important;
+}
+
+.card-text {
+  color:rgb(153, 153, 153);
+  font-size: 12px;
+  padding-bottom: 100px;
+}
+
+.card-title{
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color:
+  rgb(48, 48, 48);
+  overflow: hidden;
+  font-size: 14px;
+}
+
+.card-paragraph{
+  font-size: 12px;
+}
+img.card-img{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 250px;
+  height: 250px;
+}
+
+.modal-body{
+  padding: 80px 0px !important;
+}
+
+.price{
+  text-align: right;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 3px 0px;
+  color: #000000;
+}
+
+p.taille {
+  padding-bottom: 25px!important;
+  font-weight: bold;
+}
+
+.MuiPaper-root {
+    z-index: 100;
+}
+
+.card-deck {
+    margin-left: 0px!important;
+    margin-bottom: 25px;
 }
