update front-end and cr

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -177,7 +177,7 @@ hr.hr-text::before {
 .card-text {
   color:rgb(153, 153, 153);
   font-size: 12px;
-  padding-bottom: 100px;
+  padding-bottom: 70px;
 }
 
 .card-title{
@@ -225,4 +225,8 @@ p.taille {
 .card-deck {
     margin-left: 0px!important;
     margin-bottom: 25px;
+}
+
+.marque {
+  font-size: 12px;
 }
